# qchain

./: .gitignore  AUDIT-GRANT-APPLICATION.md  AUDIT-OUTREACH.md  AUDIT-PACKAGE.md  AUDIT-SOW.md  AUDITOR-ONBOARDING.md  DEPLOY.md  DOCS.md  LICENSE  PROJECT-PRESENTATION.md  PUBLICATION.md  README.md  ROADMAP.md  SUMMARY.md  THREAT-MODEL.md  index.html  requirements.txt
deploy/: README.md  firewall-setup.md
deploy/env/: qchain.env.example
deploy/systemd/: qchain-automine.service  qchain-node-1.service  qchain-node-2.service  qchain-node-3.service
docs/milestones/: AUDIT-FOLLOWUP-README.md  AUDIT-NOTES.md  BENCHMARK-STARK-ANON-README.md  DASHBOARD-AUTH-README.md  DIFFERENTIAL-AIR-PHASE2-README.md  DIFFERENTIAL-AIR-PHASE3-README.md  DIFFERENTIAL-AIR-README.md  HARDENING-WITHDRAW-AMOUNT-README.md  M10-Phase1-README.md  M10-Phase2-README.md  M10-Phase3-README.md  M10-Phase4-Dashboard-README.md  M10-Phase4-README.md  M8.10-README.md  M8.5-README.md  (+18 more)
qstark/: Cargo.toml  README.md
qstark/src/: lib.rs  main.rs
qstark/src/hash_air/: air.rs  anon.rs  anon_full.rs  m86_air.rs  m86_native.rs  merkle.rs  mod.rs  native.rs
qstark/tests/: hash_smoke.rs  m86_bench.rs  m86_diag.rs  m86_gap_a_soundness.rs  m86_native.rs  m86_partial_spend_soundness.rs  m86_smoke.rs  m86_soundness.rs  m8_1_soundness.rs  m8_2_air.rs  m8_2_native.rs  m8_3_anon.rs  m8_3_constraint_diag.rs  m8_3_full_smoke.rs  m8_3_full_soundness.rs  m8_3_full_trace.rs  m8_3_merkle.rs
qstark_py/: Cargo.toml  README.md  demo.py  integration_sketch.py  pyproject.toml  test_qstark_py.py
qstark_py/src/: lib.rs
(+70 files in other folders)
